<resources>
    <string name="app_name">Wyscig</string>
    <string name="tytul">Wyścigi wokół stołu</string>
    <string name="zmiana">odległości</string>
    <string name="zmiana2">światła</string>
    <string name="stolik">stolik</string>
    <string name="Wyscig">Biegnij wokół stołu</string>
    <string name="okrazenia">Wykonano %d okrążeń</string>
    <string name="sensor">Sensor</string>
    <string name="help_tytul">Oto pomoc!</string>
    <string name="help">Jeśli jesteś na kwarantannie i ci się nudzi, postaw telefon na stole, wybierz jeden z dostępnych w Twoim telefonie sensorów i zacznij biegać wokół stołu! Aplikacja zmierzy Twoje okrążenia.</string>
    <string name="powrot_z_helpa">Wróć do menu</string>
    <string name="pomoc">Pomoc</string>
    <string name="stoliczek">stoliczek</string>
    <string name="swiatla">Używasz sensora światła.</string>
    <string name="odleglosci">Używasz sensora odległości.</string>
    <string name="stop">Zakończ liczenie</string>
    <string name="start">Start</string>
    <string name="exit">wyjdź</string>
    <string name="data">Czas rozpoczęcia: %s</string>
    <string name="Dlugosc">Długość stolika w centymetrach:</string>
    <string name="Szerokosc">Szerokość stolika w centymetrach:</string>
    <string name="ustawienia">Ustawienia</string>
    <string name="zapis">Zapisz</string>
    <string name="opcje_radio">Wybierz sensor</string>
    <string name="sensor_odleglosci">Sensor odległości</string>
    <string name="sensor_jasnosci">Sensor jasności</string>
    <string name="tabela_wynikow">Tabela wyników</string>
    <string name="Obwód">Długość jednego okrążenia to około: %s m</string>
    <string name="Obwód_error">Podaj parametry stołu w ustawieniach</string>
    <string name="Trasa">Łączna trasa wynosi około %s m</string>
    <string name="predkosc">Średnia prędkość wynosi %s m/s</string>
    <string name="tempo">Tempo biegu wynosi %02d:%02d:%02d/km</string>
    <string name="czas">%02d:%02d:%02d</string>
    <string name="Promien">Podaj promień stołu:</string>
    <string name="table_shape">Kształt stołu:</string>
    <string name="Dlugosc_Korytarza">Podaj długość korytarza</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Hasło</string>
    <string name="action_sign_in">Zaloguj/zarejestruj się</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Zła nazwa użytkownika</string>
    <string name="invalid_password">Hasło musi mieć więcej niż 5 znaków</string>
    <string name="login_failed">Błąd przy logowaniu</string>
    <string name="logowanie_tytul">Logowanie</string>

</resources>