<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity2"
    android:background="@color/blekitny">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sensor"
        android:text="@string/odleglosci"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_margin="15dp" />

    <TextView
        android:id="@+id/wymiary_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:layout_below="@id/sensor"/>
        <!--android:text="Tekst tu powinien iść od wielkości stołu"-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Wyscig" />

        <TextView
        android:id="@+id/okrazenia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/okrazenia" />

        <TextView
        android:id="@+id/data_czas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data"/>

        <TextView
        android:id="@+id/odleglosc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Obwód"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true">

        <Chronometer
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/timer" />

        <Button
            android:layout_marginTop="50dp"
            android:id="@+id/start_zegar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"/>

        <Button
            android:id="@+id/stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop"/>

        <Button
            android:id="@+id/exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit"/>

    </LinearLayout>

</RelativeLayout>