<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity3"
    android:background="@color/blekitny">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/swiatla"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_margin="15dp"/>

    <TextView
        android:id="@+id/start2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Wyscig"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/okrazenia2"/>
    <TextView
        android:id="@+id/okrazenia2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>
    <TextView
        android:id="@+id/data_czas2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/okrazenia2"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true">

    <Chronometer
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:id="@+id/timer" />

    <Button
        android:layout_marginTop="50dp"
        android:id="@+id/start_zegar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"/>

    <Button
        android:id="@+id/stop2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop"/>
    <Button
        android:id="@+id/exit2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"/>
    </LinearLayout>
</RelativeLayout>